fixes header collapse issues

--- a/_sass/_shared.scss
+++ b/_sass/_shared.scss
@@ -3,7 +3,6 @@
 
   .navbar {
     background: #fff;
-    height: 80px;
     border-radius: 0;
 
     a {
